# Locsight

./: .locignore  BTL_LTHDT_Proposal_Codebase_Analyzer.docx  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Presentation & Script  - Codebase Analyzer Project.docx  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge-dependabot.yml  ci.yml  rebase-dependabot.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  INSTALLATION.md  architecture.md  development.md  installation.md
include/: CAnalyzer.hpp  CSharpAnalyzer.hpp  CppAnalyzer.hpp  CssAnalyzer.hpp  DirectoryScanner.hpp  FileAnalyzer.hpp  HtmlAnalyzer.hpp  JavaAnalyzer.hpp  JavaScriptAnalyzer.hpp  ReportGenerator.hpp  TypeScriptAnalyzer.hpp
scripts/: generate-test-fixtures.cjs  rename-artifacts.cjs  tauri-wrapper.cjs  validate-languages.cjs
src/: App.tsx  CAnalyzer.cpp  CSharpAnalyzer.cpp  CppAnalyzer.cpp  CssAnalyzer.cpp  DirectoryScanner.cpp  FileAnalyzer.cpp  HtmlAnalyzer.cpp  JavaAnalyzer.cpp  JavaScriptAnalyzer.cpp  ReportGenerator.cpp  TypeScriptAnalyzer.cpp  main.cpp
src-tauri/: Cargo.toml  build.rs  languages.toml  tauri.conf.json  techstack.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  scan.rs
src-tauri/src/engine/: annotations.rs  architecture.rs  assets.rs  complexity.rs  config.rs  git.rs  mod.rs  roles.rs  scanner.rs  secrets.rs  techstack.rs  uloc.rs
src-tauri/src/models/: project_summary.rs
src-tauri/tests/: asset_multimedia_tests.rs  asset_tests.rs  export_tests.rs  scanner_tests.rs
src-tauri/tests/fixtures/: languages_expected.json  techstacks_expected.json
src-tauri/tests/fixtures/languages/: 8th.8th  abap.abap  algol_68.a68  alloy.als  apache_velocity.vm  apl.apl  applescript.applescript  asp_net.asax  autoconf.in  batch.bat  bean.bean  blade.blade  brightscript.brs  cabal.cabal  clipper.prg  closure_template.soy  coffeescript.coffee  coldfusion.cfm  config.cfg  coq.coq  d2.d2  daml.daml  delphi.dpr  dust_js.dust  elixir_template.eex  emojicode.emojic  erb.erb  erlang.erl  f_.fs  factor.factor  (+88 more)
src/components/: Assets.tsx  Dashboard.tsx  Export.tsx  Files.tsx  Git.tsx  Graph.tsx  Health.tsx  Insights.tsx  Settings.tsx  Shell.tsx  Welcome.tsx  data.ts  tokens.ts
src/hooks/: useAnalysis.tsx
src/styles/: index.css
src/types/: index.ts
tests/: unit_tests.cpp
ui_design/: package.json  vite.config.ts
ui_design/electron/: fileScanner.cjs  main.cjs
ui_design/src/: vite-env.d.ts
(+15 files in other folders)
